[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Client.gd" type="Script" id=1]
[ext_resource path="res://assets/skin_ui/green.png" type="Texture" id=2]
[ext_resource path="res://assets/skin_ui/blue.png" type="Texture" id=3]
[ext_resource path="res://assets/skin_ui/orange.png" type="Texture" id=4]
[ext_resource path="res://assets/skin_ui/black.png" type="Texture" id=5]
[ext_resource path="res://assets/skin_ui/red.png" type="Texture" id=6]
[ext_resource path="res://assets/skin_ui/purple.png" type="Texture" id=7]
[ext_resource path="res://assets/skin_ui/pink.png" type="Texture" id=8]
[ext_resource path="res://assets/skin_ui/yellow.png" type="Texture" id=9]

[node name="client" type="Node2D"]
script = ExtResource( 1 )

[node name="ConnectButton" type="Button" parent="."]
margin_left = 355.0
margin_top = 309.0
margin_right = 655.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 150, 25 )
text = "Jouer"

[node name="PseudoInput" type="LineEdit" parent="."]
margin_left = 355.0
margin_top = 121.0
margin_right = 655.0
margin_bottom = 153.0
align = 1
max_length = 50

[node name="ErrorLog" type="RichTextLabel" parent="."]
margin_left = 355.0
margin_top = 86.0
margin_right = 653.0
margin_bottom = 112.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
override_selected_font_color = true

[node name="PlayerColorInfo" type="Label" parent="."]
margin_left = 382.0
margin_top = 165.0
margin_right = 628.0
margin_bottom = 192.0
text = "Couleur choisit : blue"

[node name="PlayerColor" type="Node2D" parent="."]

[node name="BlueButton" type="TextureButton" parent="PlayerColor"]
margin_left = 383.0
margin_top = 211.0
margin_right = 403.0
margin_bottom = 231.0

[node name="Blue" type="Sprite" parent="PlayerColor/BlueButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="BlackButton" type="TextureButton" parent="PlayerColor"]
margin_left = 458.0
margin_top = 212.0
margin_right = 478.0
margin_bottom = 232.0

[node name="Black" type="Sprite" parent="PlayerColor/BlackButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="YellowButton" type="TextureButton" parent="PlayerColor"]
margin_left = 608.0
margin_top = 257.0
margin_right = 628.0
margin_bottom = 277.0

[node name="Yellow" type="Sprite" parent="PlayerColor/YellowButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="RedButton" type="TextureButton" parent="PlayerColor"]
margin_left = 533.0
margin_top = 257.0
margin_right = 553.0
margin_bottom = 277.0

[node name="Red" type="Sprite" parent="PlayerColor/RedButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="PurpleButton" type="TextureButton" parent="PlayerColor"]
margin_left = 458.0
margin_top = 257.0
margin_right = 478.0
margin_bottom = 277.0

[node name="Purple" type="Sprite" parent="PlayerColor/PurpleButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="PinkButton" type="TextureButton" parent="PlayerColor"]
margin_left = 383.0
margin_top = 257.0
margin_right = 403.0
margin_bottom = 277.0

[node name="Pink" type="Sprite" parent="PlayerColor/PinkButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="OrangeButton" type="TextureButton" parent="PlayerColor"]
margin_left = 608.0
margin_top = 212.0
margin_right = 628.0
margin_bottom = 232.0

[node name="Orange" type="Sprite" parent="PlayerColor/OrangeButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="GreenButton" type="TextureButton" parent="PlayerColor"]
margin_left = 533.0
margin_top = 212.0
margin_right = 553.0
margin_bottom = 232.0

[node name="Green" type="Sprite" parent="PlayerColor/GreenButton"]
position = Vector2( 10, 10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[connection signal="pressed" from="ConnectButton" to="." method="_on_Button_pressed"]
